--- a/TinyEE/TinyEE.csproj
+++ b/TinyEE/TinyEE.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>TinyEE</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,18 +38,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompiledExpression.cs" />
     <Compile Include="ParsedExpression.cs" />
     <Compile Include="Extension\StringExtension.cs" />
+    <Compile Include="Parser\Parser.cs" />
+    <Compile Include="Parser\ParseTree.cs" />
+    <Compile Include="Parser\Scanner.cs" />
     <Compile Include="Runtime\ContextFunctor.cs" />
     <Compile Include="Transformer\DLRUtil.cs" />
     <Compile Include="Runtime\Functions.cs" />
-    <Compile Include="Parser\Parser.cs" />
-    <Compile Include="Parser\ParseTree.cs" />
-    <Compile Include="Transformer\JavaScriptTransformer.cs" />
+    <Compile Include="Transformer\JavaScript\JavaScriptTransformer.cs" />
     <Compile Include="Transformer\ASTTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Parser\Scanner.cs" />
     <Compile Include="Tee.cs" />
+    <Compile Include="Transformer\JavaScript\JsExtension.cs" />
+    <Compile Include="Transformer\JavaScript\JsTransformationOptions.cs" />
+    <Compile Include="Transformer\JavaScript\VariableMode.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
