--- a/TinyEE/TinyEE.csproj
+++ b/TinyEE/TinyEE.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
