--- a/TinyEE.Test/TinyEE.Test.csproj
+++ b/TinyEE.Test/TinyEE.Test.csproj
@@ -38,11 +38,15 @@
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EvaluationTest.cs" />
+    <Compile Include="LiteralTest.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TinyEE\TinyEE.csproj">
