--- a/TinyEE.Test/TinyEE.Test.csproj
+++ b/TinyEE.Test/TinyEE.Test.csproj
@@ -42,11 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EvaluationTest.cs" />
-    <Compile Include="LiteralTest.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="ArithmeticsExpressionTests.cs" />
+    <Compile Include="BooleanExpressionTest.cs" />
+    <Compile Include="BuiltInFunctionsTests.cs" />
+    <Compile Include="ChoiceExpressionTest.cs" />
+    <Compile Include="ComparisionExpressionTest.cs" />
+    <Compile Include="GeneralTest.cs" />
+    <Compile Include="LiteralExpressionTest.cs" />
+    <Compile Include="MemberExpressionTest.cs" />
+    <Compile Include="MethodCallTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestUtils.cs" />
+    <Compile Include="VariableExpression.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TinyEE\TinyEE.csproj">
